Fix T52374: Changes of rigid body related settings during simulation will break the simulation

Revert 9cd6b03, 3edc8c1, b87d10d and do a better fix for T50230.